# Boussq

./: .gitignore  Doxyfile  Makefile  colrow.f  configure.ac  mpiffttest.f  threedNetCDF.f  threedfluid.f  threedstuff.f
octave/: cdiff.m  threedslicesstress.m  threedslicesstressavg.m
scripts/: NusseltNumber.sh  addlaminar.nco
scripts/octave/: threedslicesstress.m
src/: Makefile.am  threedNetCDF.f90  threedfluid.f90
